# Opis

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcpcolorcurve.cpp  qcpcolorcurve.h  resources.qrc  seeker.cpp  seeker.h  seekerposition.cpp  seekerposition.h  timeline.cpp  timeline.h  timeseriesdata.cpp  timeseriesdata.h  videoplayer.cpp  videoplayer.h  workspaceplot.cpp  workspaceplot.h
